# lambda-s3-restructure

./: Cargo.toml  README.adoc
src/: main.rs
