[package]
name = "lambda-s3-restructure"
version = "0.4.0"
edition = "2021"
homepage = "https://github.com/buoyant-data/lambda-s3-restructure"
authors = [
    "R Tyler Croy <rtyler@buoyantdata.com>",
]

[dependencies]
anyhow = "1.0.75"
aws-config = { version = "1.5", features = ["behavior-version-latest"]}
aws-sdk-s3 = "1.49"
aws_lambda_events = { version = "0.15.1", default-features = false, features = ["sns", "sqs", "s3"] }
chrono = "0.4.31"
liquid = "0.26"
serde = { version = "=1", features = ["rc"] }
lambda_runtime = "0.13.0"
regex = "1.10"
routefinder = "0.5.3"
serde_json = "1.0.105"
tokio = { version = "1.40", features = ["macros"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt", "env-filter", "tracing-log"] }
urlencoding = "2.1.3"
url = { version = "2.3", features = ["serde"] }
